--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
            family = "ODell",
            role = c("aut", "cre"),
            email = "nickodell@gmail.com")
-Description: What the package does (one paragraph).
+Description: Decrypt and parse MySQL's login path file.
 License: MIT + file LICENSE.txt
 Encoding: UTF-8
 LazyData: true
